public/stylesheets/style.css
/* ... */
body#record #videos[data-leadrecording="true"] .video-dialog{
  max-width: 25%;
}

body#record .video-dialog img{
  width: 25px;
}

body#record .video-dialog #progress{
  width: 200px;
  height: 10px;
  border: 1px solid white;
  border-radius: 5px;
  background-color: transparent;
}

body#record .video-dialog #progress #indicator{
  height: 100%;
  background: white;
  width: 0px;
  display: block;
}

body#record #videos .half h3{
  position: absolute;
  left: 0;
  top: 15vh;
  padding: 0.5em 1em 0.5em 2em;
  background: rgba(0, 0, 0, 0.85);
  border-radius: 0 3px 3px 0;
  border: 1px solid rgba(255,255,255,0.5);
  border-width: 1px 1px 1px 0;
}

body#record #videos .half#performance h3{
  left: inherit;
  border-radius: 3px 0 0 3px;
  right: 0;
  padding: 0.5em 2em 0.5em 1em;
  border-width: 1px 0 1px 1px;
}

body#record #controls{
  position: fixed;
  bottom: 5vh;
  display: flex;
  flex-direction: column;
  left: 50vw;
  transform: translateX(-50%);
}

body#record #controls button{
  margin-bottom: 1em;
  border: 0px;
  box-shadow: 0 1px 2px black;
  color: white;
  outline: 0 solid transparent;
  border-top: 1px solid rgba(255, 255, 255, 0.35);
  min-width: 185px;
}

body#record #controls button:hover{
  cursor: pointer;
}

body#record #controls button.listen, body#record #controls button.playback{
  background-color: #46649f;
}

body#record #controls button.listen:hover, body#record #controls button.playback:hover{
  background-color: #5679bd;
}

body#record #controls button.record{
  background-color: #c34343;
}

body#record #controls button.record:hover{
  background-color: #e05252;
}

body#record #controls button.save{
  color: black;
}

/* Create Styles */

main{
  width: 100%;
  max-width: 1280px;
  margin-left: auto;
  margin-right: auto;
  padding: 1em;
  box-sizing: border-box;
}

body header, body#accountLogin header{
  text-align: center;
  padding-top: 2em;
}

body#accountLogin main section{
  max-width: 800px;
  margin-left: auto;
  margin-right: auto;
  margin-top: 3em;
}

body main section form, body#accountLogin main section form{
  /* margin-bottom: 4em; */
  display: flex;
  flex-direction: column;
}

body main section form h2, body#accountLogin main section form h2{
  margin-top: 1em;
}

body main section form label{
  margin-bottom: 0.5em;
  font-weight: 600;
}

body main section form input{
  background: black;
  border: 1px solid #969696;
  font-size: 1em;
  padding: 0.75em;
  color: white;
  font-weight: 600;
  width: 100%;
  box-sizing: border-box;
  font-family: 'Montserrat';
  margin-bottom: 1em;
}

body#accountLogin main section form input, body#accountCreate main section form input {
  margin-bottom: 1em;
}

body main section form input[type="text"]:focus, body#accountLogin main section form input:focus{
  outline: 1px solid #ffeb00;
}

body main section form div.sectionInput{
  display: flex;
  justify-content: space-between;
  margin-bottom: 2em;
}

body main section form div.sectionInput input[type="text"]{
  width: 100%;
  margin-right: 1em;
}

body main section form button{
  min-width: 85px;
}

body main section form button#savePerformanceSettings{
  align-self: center;
  min-width: 100px;
}

body main #share pre{
  font-family: 'Montserrat';
  background: white;
  color: black;
  padding: 1em;
  box-sizing: border-box;
  border-radius: 3px;
}

/* Login styles */

body#accountLogin main section form{
  display: flex;
}

body#accountLogin main section form button, #createAccountBtn{
  width: 185px;
  align-self: center;
}

/* Dashboard styles */

body#dashboard{
  background-image: url('/assets/images/background_blurred.jpg');
  background-size: cover;
}

body#dashboard main{
  display: flex;
  padding: 0;
  height: 100%;
  width: 100%;
  max-width: 100%;
}

body#dashboard main section{
  display: flex;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  padding: 1em;
  max-width: inherit;
  width: 15%;
}

body#dashboard main section#choirMenu{
  flex-direction: column;
  background: white;
  padding: 1em;
  color: black;
}

body#dashboard main section#choirMenu ul{
  margin-bottom: 1em;
}

body#dashboard main section#choirMenu ul li{
  margin-bottom: 0.5em;
  color: black;
}

body#dashboard main section#choirMenu ul li:hover{
  color: white;
  background-color: #424242;

}

body#dashboard main section#choirMenu ul li a{
  text-decoration: none;
  color: inherit;
  display: block;
  padding: 0.5em;
}

body#dashboard main section#choirMenu ul li a.selected{
  background-color: #2a93e4;
  color: white;
  position: relative;
  font-weight: 600;
}

body#dashboard main section#choirMenu ul li a.selected::after{
  content: '';
  display: block;
  width: 1em;
  height: 1em;
  background: #2a93e4;
  position: absolute;
  top: 50%;
  left: 95%;
  margin-top: -0.5em;
  transform: rotate(45deg);
}

body#dashboard main section#choirMenu button.cta-button{
  width: 100%;
}

body#dashboard main section#choirInfo{
  position: relative;
  flex-grow: 1;
  max-width: inherit;
  flex-direction: column;
  text-align: left;
  align-items: flex-start;
  max-height: 100%;
  overflow: scroll;
}

body#dashboard main section#choirInfo header{
  margin: 0;
  padding: 0;
  text-align: left;
  width: 100%;
}

body#dashboard main section#choirInfo header h1{
  text-shadow: 0 1px 1px black;
  margin-bottom: 0;
  font-size: 2.5em;
}

body#dashboard main section#choirInfo header p{
  max-width: 45%;
  margin-bottom: 2em;
  margin-top: 1em;
}

body#dashboard main section#choirInfo #management{
  display: flex;
  flex-direction: column;
  width: 100%;
  padding: 0;
}

body#dashboard main section#choirInfo #management div, body#dashboard main section#choirInfo #management div *{
  display: flex;
}

body#dashboard main section#choirInfo #management div#subnav{
  border-bottom: 2px solid white;
  margin-bottom: 0.5em;
}

body#dashboard main section#choirInfo #management div#subnav ol{
  padding: 0;
  margin: 0;
}
/* ... */

